# src/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/tasks/": {
+        "/tasks": {
             "get": {
                 "description": "Возвращает все задачи",
                 "consumes": [
@@ -110,7 +110,7 @@
                 }
             }
         },
-        "/api/v1/tasks/{id}": {
+        "/tasks/{id}": {
             "put": {
                 "description": "Изменяет задачу по id",
                 "consumes": [
